<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/indicadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="50dp"
                android:background="#fff"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="visible"
                >

                <neto.com.mx.aperturatienda.utils.font.RobotoTextView
                    android:id="@+id/nombreIndicador"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/negro"
                    android:gravity="center"
                    android:textColor="@color/negro"
                    android:textSize="20sp"
                    app:typeface="robotoBold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_fechaApertura"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_fechaApertura"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_diasInvConfigurados"
                        android:fontFamily="@font/roboto"
                       />

                    <TextView
                        android:id="@+id/indicadores_diasInvConfigurados"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_existencia"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_existencia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_frecuencia"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_frecuencia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_montoVenta"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_montoVenta"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_stockout"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_stockout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_tamanioTienda"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_tamanioTienda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_tiendaId"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_tiendaId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_ventaAlcohol"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_ventaAlcohol"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_ventaPerdida"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_ventaPerdida"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indicadores_ventaPiezas"
                        android:fontFamily="@font/roboto"
                        />

                    <TextView
                        android:id="@+id/indicadores_ventaPiezas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tabla_articulos_mayor_viewText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/articulosMayorVta"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        android:fontFamily="@font/roboto"
                        />

                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvMayorVenta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>-->
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="30dp"
                    android:columnCount="1"
                    android:rowCount="2"
                    android:layout_weight="0.97"

                    >
                    <TableLayout
                        android:id="@+id/tabla_articulos_mayor_view"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="30dp"


                        >
                    </TableLayout>
                </GridLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tabla_articulos_menor_viewText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/articulosMenorVta"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        android:fontFamily="@font/roboto"
                       />

                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvMenorVenta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>-->
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="30dp"
                    android:columnCount="1"
                    android:rowCount="2"
                    android:layout_weight="0.97"
                    >
                    <TableLayout
                        android:id="@+id/tabla_articulos_menor_view"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="30dp"
                        >
                    </TableLayout>
                </GridLayout>

                <!--<android.support.design.widget.FloatingActionButton-->
                <!--android:id="@+id/fab"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="bottom|end"-->
                <!--android:layout_margin="@dimen/fab_margin"-->
                <!--app:srcCompat="@drawable/places_ic_actualizar"-->
                <!--/>-->
            </LinearLayout>
    </ScrollView>
</LinearLayout>