<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.ActivityLogin">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/log_blanco" />

            <neto.com.mx.aperturatienda.utils.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/negro"
                app:typeface="robotoBold"
                android:text="@string/usuarioLogin"
                android:textColor="@color/blanco"
                android:textSize="18sp" />
            <!--
            android:fontFamily="@font/montserrat_extrabold"-->

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/blanco"
                android:backgroundTintMode="@color/blanco"
                android:cursorVisible="true"
                android:drawableBottom="@color/blanco"
                android:ems="10"

                android:inputType="number"
                android:maxLength="6"
                android:shadowColor="@color/blanco"
                android:singleLine="true"
                android:textColor="@color/blanco"
                android:textColorHighlight="@color/blanco"
                android:textColorHint="@color/blanco"
                android:textColorLink="@color/blanco"
                android:textSize="18sp" />
<!-- android:fontFamily="@font/montserrat_bold" -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/blanco" />
        </LinearLayout>

        <View style="@style/vertical_separator" />

        <View style="@style/vertical_separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <neto.com.mx.aperturatienda.utils.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/blanco"
                app:typeface="robotoBold"
                android:text="@string/contraLogin"
                android:textColor="@color/blanco"
                android:textSize="18sp" />
            <!--  android:fontFamily="@font/montserrat_extrabold"-->
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/blanco"
                android:backgroundTintMode="@color/blanco"
                android:drawableBottom="@color/blanco"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="20"
                android:shadowColor="@color/blanco"
                android:singleLine="true"
                android:textColor="@color/blanco"
                android:textColorHighlight="@color/blanco"
                android:textColorHint="@color/blanco"
                android:textColorLink="@color/blanco"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/blanco" />
        </LinearLayout>

        <View style="@style/vertical_separator" />

        <View style="@style/vertical_separator" />

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/estilo_boton_login"
            android:text="@string/entrarLogin"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            />

    </LinearLayout>


</LinearLayout>